--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <script src="./script.js" defer></script>
+    <script src="./js/index.js" type="module" defer></script>
   </head>
   <body>
     <main>
